[package]
name = "tensile"
version = "0.7.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

license = "MIT"

description = "A test framework capable of dynamic and parallel test execution"

repository = "https://github.com/Marwes/tensile"
documentation = "https://docs.rs/tensile"
readme = "README.md"

[dependencies]
futures = "0.3.17"
num_cpus = "1.13.0"
structopt = "0.3.23"
structopt-derive = "0.4.16"
termcolor = "1.1.2"
tokio = { version = "1.12.0", optional = true, features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "dog_food"
harness = false
